--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all contributors to the repository.
 
-Mohamed Gamal <mohamed.gamal126027@gmail.com>
+abdelmaguid seif <magedsaif21@gmail.com>
+Emad Ahmed <emadanwer.official@gmail.com>
